--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -135,7 +135,7 @@ header {
             display: flex;
             justify-content: center;
 
-            .header--link {
+            .header__link {
               color: $header-color;
               text-decoration: none;
               font-size: 18px;
