--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,9 +10,14 @@ $dark-gray: #333333;
 $white: #F2F2F2;
 $pink: #F50A4D;
 
+$title-color: $pink;
+$main-color: $dark-gray;
+$container-mobile: 0 5%;
+
 // header
 $header-background-color: $dark-gray;
 $header-button-color: $pink;
 $header-color: $white;
 $header-size: 60px;
 $header-burger-menu-color: $white;
+
