--- a/app/scss/_main-block.scss
+++ b/app/scss/_main-block.scss
@@ -2,4 +2,66 @@
 
 main {
   margin-top: $header-size;
+
+  section.jumbotron {
+    display: grid;
+    grid-template-columns: minmax(320px, 100%);
+    grid-template-rows: minmax(250px, 25vh) minmax(50px, auto);
+
+    .jumbotron__background {
+      grid-row: 1;
+      grid-column: 1;
+      height: 55%;
+      width: 100%;
+      position: relative;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+
+    .jumbotron__logo {
+      grid-row: 1;
+      grid-column: 1;
+     // width: 90%;
+      height: 100%;
+      align-content: center;
+      justify-self: center;
+      width: fit-content;
+      display: grid;
+      * {
+        grid-row: 1;
+        grid-column: 1;
+        margin: 0;
+      }
+
+      .jumbotron__logo-body {
+
+        width: fit-content;
+        h1 {
+          font-style: italic;
+          font-weight: bold;
+          font-size: 330%;
+          //font-size: 2.75em;
+          text-align: center;
+          color: $title-color;
+        }
+
+        h6 {
+          color: $main-color;
+        }
+        h6:first-child {
+          text-align: left;
+        }
+        h6:last-child {
+          text-align: right;
+        }
+      }
+    }
+
+    .jumbotron__image {
+      grid-row: 2;
+      width: 65%;
+      height: auto;
+    }
+  }
 }
