--- a/app/scss/_main-block.scss
+++ b/app/scss/_main-block.scss
@@ -3,10 +3,10 @@
 main {
   margin-top: $header-size;
 
-  section.jumbotron {
+  section#jumbotron {
     display: grid;
     grid-template-columns: minmax(320px, 100%);
-    grid-template-rows: minmax(250px, 25vh) minmax(50px, auto);
+    grid-template-rows: minmax(180px, 25vh) minmax(50px, auto);
 
     .jumbotron__background {
       grid-row: 1;
@@ -22,7 +22,6 @@ main {
     .jumbotron__logo {
       grid-row: 1;
       grid-column: 1;
-     // width: 90%;
       height: 100%;
       align-content: center;
       justify-self: center;
@@ -35,8 +34,8 @@ main {
       }
 
       .jumbotron__logo-body {
-
         width: fit-content;
+
         h1 {
           font-style: italic;
           font-weight: bold;
@@ -44,16 +43,21 @@ main {
           //font-size: 2.75em;
           text-align: center;
           color: $title-color;
+          line-height: 130%;
         }
 
         h6 {
           color: $main-color;
+          line-height: 0;
         }
         h6:first-child {
           text-align: left;
+          font-size: 10px;
         }
         h6:last-child {
           text-align: right;
+          font-size: 12px;
+          line-height: 100%;
         }
       }
     }
@@ -61,7 +65,42 @@ main {
     .jumbotron__image {
       grid-row: 2;
       width: 65%;
+      max-width: 400px;
       height: auto;
+    }
+  }
+
+  @media screen and (min-width: $breakpoint-tablet) {
+    section#jumbotron {
+      grid-template-rows: minmax(300px, 25vh);
+
+      .jumbotron__background {
+        height: 100%;
+      }
+
+      .jumbotron__logo {
+        justify-self: start;
+        margin-left: 10%;
+
+        .jumbotron__logo-body {
+          h6:first-child {
+            font-size: 16px;
+          }
+          h6:last-child {
+            font-size: 18px;
+          }
+        }
+      }
+      .jumbotron__image {
+        grid-row: 1;
+        grid-column: 1;
+        align-self: end;
+        justify-self: end;
+        margin-bottom: -5%;
+        margin-right: 5vw;
+        width: fit-content;
+        max-width: 750px;
+      }
     }
   }
 }
