--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -21,7 +21,9 @@ $subtitle-color: $dark-gray;
 $main-color: $gray;
 
 $container-mobile: 0 5%;
-$section-margin-top: 35%;
+$container-desktop: 0 15%;
+$section-margin-top-mobile: 35%;
+$section-margin-top-desktop: 15%;
 
 // header
 $header-background-color: $dark-gray;
