--- a/app/scss/_main-block.scss
+++ b/app/scss/_main-block.scss
@@ -124,6 +124,87 @@ main {
     }
   }
 
+  section#car, section#drivers {
+    h1 {
+      overflow:hidden;
+      color: $pink;
+      font-size: 2em;
+      font-weight: $title-font-weight;
+      font-style: $title-font-style;
+      font-family: $font-family-titillium-web;
+      margin-bottom: 0;
+      padding: $container-title-mobile;
+    }
+    h1:after{
+      content:'';
+      display:inline-block;
+      width:100%; height:100%;
+      margin-right:-100%;
+      margin-left: 3%;
+      border-bottom:3px solid $pink;
+    }
+  }
+
+  section#car {
+    .car__body {
+      color: $main-color;
+
+      .car__view {
+
+        .car__summary {
+          padding: $container-mobile;
+          margin-top: 6%;
+          margin-bottom: -10%;
+
+          li {
+            list-style: none;
+            line-height: 133%;
+            letter-spacing: 0.01em;
+            font-style: italic;
+            font-weight: 600;
+            font-size: 1em;
+          }
+        }
+
+        .car__main-view {
+          display: grid;
+
+          .car__image {
+            width: 100%;
+            mix-blend-mode: darken;
+          }
+          .car__main-info {
+            padding: 2.5% 5%;
+            background-color: $car-main-info-background;
+
+            * {
+              margin: 0;
+              line-height: 1.7em;
+              font-weight: bold;
+            }
+          }
+        }
+      }
+
+      .car__full-info {
+        padding: $container-mobile;
+        display: flex;
+        flex-direction: column;
+
+        ul {
+          margin: 0;
+          padding: 7% 0 0 0;
+          font-size: 1em;
+        }
+        li {
+          list-style: none;
+          line-height: 157%;
+          letter-spacing: 0.01em;
+        }
+      }
+    }
+  }
+
   @media screen and (min-width: $breakpoint-tablet) {
     section#jumbotron {
       grid-template-rows: minmax(300px, 25vh);
