--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -11,6 +11,7 @@ $white: #F2F2F2;
 $pink: #F50A4D;
 $gray: #4F4F4F;
 $middle-gray: #EBEBEB;
+$middle-gray-half-opacity: #EBEBEB77;
 
 $title-color: $pink;
 $title-font-weight: bold;
@@ -23,7 +24,7 @@ $main-color: $gray;
 
 $container-mobile: 0 5%;
 $container-title-mobile: 0 0 0 5%;
-$container-desktop: 0 15%;
+$container-desktop: 0 10%;
 $section-margin-top-mobile: 35%;
 $section-margin-top-desktop: 15%;
 
