--- a/app/scss/_main-block.scss
+++ b/app/scss/_main-block.scss
@@ -181,10 +181,10 @@ main {
               margin: 0;
               line-height: 1.7em;
               font-weight: bold;
+              font-size: .92em;
             }
           }
         }
-
 
         .car__full-info {
           padding: $container-mobile;
@@ -195,12 +195,12 @@ main {
             margin: 0;
             padding: 8% 0 0 0;
             font-size: 1em;
-          }
 
-          li {
-            list-style: none;
-            line-height: 157%;
-            letter-spacing: 0.01em;
+            li {
+              list-style: none;
+              line-height: 157%;
+              letter-spacing: 0.01em;
+            }
           }
         }
       }
@@ -263,6 +263,8 @@ main {
       .about__article {
         padding: $container-desktop;
         align-self: center;
+        justify-self: end;
+        width: 65%;
 
         p {
           padding: 5% 0;
@@ -274,8 +276,66 @@ main {
 
     section#car {
       .car__body {
+        padding: $container-desktop;
         display: flex;
         flex-direction: row-reverse;
+        justify-content: space-between;
+
+        .car__summary {
+          padding: 0;
+          text-align: left;
+        }
+
+        .car__view {
+          flex-basis: 80%;
+
+          .car__main-view {
+            * {
+              grid-row: 1;
+              grid-column: 1;
+            }
+
+            .car__main-info {
+              width: 50%;
+              align-self: end;
+              z-index: 1;
+              background-color: $middle-gray-half-opacity;
+              backdrop-filter: blur(4px);
+              font-size: .8em;
+            }
+          }
+          .car__full-info {
+            padding: 0;
+            flex-direction: row;
+            //flex-wrap: nowrap;
+            width: 100%;
+
+            ul {
+              width: 50%;
+              font-size: .9em;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  @media screen and (min-width: $breakpoint-pc) {
+    section#car {
+      .car__body {
+        .car__view {
+          .car__main-view {
+            .car__main-info {
+              font-size: 1em;
+            }
+          }
+          .car__full-info {
+            ul {
+              width: 45%;
+              font-size: 1em;
+            }
+          }
+        }
       }
     }
   }
