--- a/app/scss/_main-block.scss
+++ b/app/scss/_main-block.scss
@@ -79,6 +79,7 @@ main {
   // * {}
 
     .about__view {
+      margin-top: $section-margin-top-mobile;
 
       display: grid;
 
@@ -128,12 +129,13 @@ main {
     h1 {
       overflow:hidden;
       color: $pink;
-      font-size: 2em;
+      font-size: 2.4em;
       font-weight: $title-font-weight;
       font-style: $title-font-style;
       font-family: $font-family-titillium-web;
-      margin-bottom: 0;
+      margin: 0;
       padding: $container-title-mobile;
+      line-height: 100%;
     }
     h1:after{
       content:'';
@@ -146,6 +148,7 @@ main {
   }
 
   section#car {
+    margin-top: $section-margin-top-mobile;
     .car__body {
       color: $main-color;
 
@@ -275,6 +278,7 @@ main {
     }
 
     section#car {
+      margin-top: $section-margin-top-desktop;
       .car__body {
         padding: $container-desktop;
         display: flex;
