--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -35,6 +35,14 @@ $header-color: $white;
 $header-size: 60px;
 $header-burger-menu-color: $white;
 
+// footer
+$footer-background-color: $dark-gray;
+$footer-button-color: $gray;
+$footer-color: #E0E0E0;
+$footer-form-color: $white;
+$footer-form-border-color: $footer-button-color;
+
+
 // car
 $car-main-info-background: $middle-gray;
 
