refactor scss files

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,5 +5,8 @@
 // put here other imports
 @import "header";
 @import "main-block";
+@import "titles";
+@import "about";
 @import "drivers";
+@import "car";
 @import "footer";
