jumbotron file fix

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -5,6 +5,7 @@
 // put here other imports
 @import "header";
 @import "main-block";
+@import "jumbotron";
 @import "titles";
 @import "about";
 @import "drivers";
