--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -53,7 +53,7 @@ footer {
     * {
       margin: 2% 0;
       width: 100%;
-      border-color: $gray;
+      border-color: $grey;
       border-width: 1px;
       color: $footer-form-color;
       background-color: transparent;
