--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -6,12 +6,12 @@ $breakpoint-tablet: 768px;
 $breakpoint-pc: 1024px;
 
 // colors
-$dark-gray: #333333;
+$dark-grey: #333333;
 $white: #F2F2F2;
 $pink: #F50A4D;
-$gray: #4F4F4F;
-$middle-gray: #EBEBEB;
-$middle-gray-half-opacity: #EBEBEB77;
+$grey: #4F4F4F;
+$middle-grey: #EBEBEB;
+$middle-grey-half-opacity: #EBEBEB77;
 
 $title-color: $pink;
 $title-font-weight: bold;
@@ -19,8 +19,8 @@ $title-font-style: italic;
 $title-font-size-mobile: 36px;
 $title-font-size-desktop: 48px;
 
-$subtitle-color: $dark-gray;
-$main-color: $gray;
+$subtitle-color: $dark-grey;
+$main-color: $grey;
 
 $container-mobile: 0 5%;
 $container-title-mobile: 0 0 0 5%;
@@ -29,21 +29,21 @@ $section-margin-top-mobile: 8%;
 $section-margin-top-desktop: 9%;
 
 // header
-$header-background-color: $dark-gray;
+$header-background-color: $dark-grey;
 $header-button-color: $pink;
 $header-color: $white;
 $header-size: 60px;
 $header-burger-menu-color: $white;
 
 // footer
-$footer-background-color: $dark-gray;
-$footer-button-color: $gray;
+$footer-background-color: $dark-grey;
+$footer-button-color: $grey;
 $footer-color: #E0E0E0;
 $footer-form-color: $white;
 $footer-form-border-color: $footer-button-color;
 
 
 // car
-$car-main-info-background: $middle-gray;
+$car-main-info-background: $middle-grey;
 
 
