--- a/app/scss/_drivers.scss
+++ b/app/scss/_drivers.scss
@@ -20,7 +20,7 @@
   .line {
     width: 100%;
     height: 0;
-    border-bottom: 1px solid $middle-gray;
+    border-bottom: 1px solid $middle-grey;
   }
 
   .driver-photo {
@@ -32,7 +32,7 @@
     font-size: 1.1em;
     font-weight: 600;
     font-style: italic;
-    color: $gray;
+    color: $grey;
     margin-bottom: 1.5%;
   }
 
@@ -41,7 +41,7 @@
     font-weight: 700;
     font-style: italic;
     font-size: 2.1em;
-    color: $dark-gray;
+    color: $dark-grey;
   }
 
   .description {
@@ -67,7 +67,7 @@
     width: 90%;
     margin-bottom: 2%;
     height: 0;
-    border-bottom: 2px solid $middle-gray;
+    border-bottom: 2px solid $middle-grey;
   }
 
   .driver-profile {
