--- a/app/scss/_drivers.scss
+++ b/app/scss/_drivers.scss
@@ -13,7 +13,7 @@
 
 .driver-container-mobile {
   padding: $container-mobile;
-  margin-top: $section-margin-top-mobile;
+  margin-top: 4%;
   display: flex;
   flex-direction: column;
 
