--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -16,8 +16,8 @@ $middle-grey-half-opacity: #EBEBEB77;
 $title-color: $pink;
 $title-font-weight: bold;
 $title-font-style: italic;
-$title-font-size-mobile: 36px;
-$title-font-size-desktop: 48px;
+$title-font-size-mobile: 2.2em;
+$title-font-size-desktop: 2.4em;
 
 $subtitle-color: $dark-grey;
 $main-color: $grey;
