--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -138,7 +138,7 @@ header {
             .header__link {
               color: $header-color;
               text-decoration: none;
-              font-size: 18px;
+              font-size: 1.2em;
             }
           }
         }
@@ -153,7 +153,7 @@ header {
         z-index: 3;
         text-transform: uppercase;
         letter-spacing: 0.08em;
-        font-size: 14px;
+        font-size: 0.9em;
         line-height: 30px;
         border: 0;
         outline: none;
