--- a/app/scss/_titles.scss
+++ b/app/scss/_titles.scss
@@ -4,7 +4,7 @@ section#car, section#drivers {
   h1 {
     overflow:hidden;
     color: $pink;
-    font-size: 2.4em;
+    font-size: $title-font-size-mobile;
     font-weight: $title-font-weight;
     font-style: $title-font-style;
     font-family: $font-family-titillium-web;
@@ -19,5 +19,13 @@ section#car, section#drivers {
     margin-right:-100%;
     margin-left: 3%;
     border-bottom:3px solid $pink;
+  }
+}
+
+@media screen and (min-width: $breakpoint-tablet){
+  section#car, section#drivers {
+    h1 {
+      font-size: $title-font-size-desktop;
+    }
   }
 }
