--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -25,8 +25,8 @@ $main-color: $grey;
 $container-mobile: 0 5%;
 $container-title-mobile: 0 0 0 5%;
 $container-desktop: 0 10%;
-$section-margin-top-mobile: 10%;
-$section-margin-top-desktop: 12%;
+$section-padding-top-mobile: 80px;
+$section-padding-top-desktop: 12%;
 
 // header
 $header-background-color: $dark-grey;
