--- a/app/scss/_drivers.scss
+++ b/app/scss/_drivers.scss
@@ -11,24 +11,24 @@
   align-items: center;
 }
 
-.driver-container-mobile {
+.drivers__driver-container_mobile {
   padding: $container-mobile;
   margin-top: 4%;
   display: flex;
   flex-direction: column;
 
-  .line {
+  .drivers__line {
     width: 100%;
     height: 0;
     border-bottom: 1px solid $middle-grey;
   }
 
-  .driver-photo {
+  .drivers__driver-photo {
     width: 100%;
     margin: 6% 0;
   }
 
-  .driver-position {
+  .drivers__driver-position {
     font-size: 1.1em;
     font-weight: 600;
     font-style: italic;
@@ -36,7 +36,7 @@
     margin-bottom: 1.5%;
   }
 
-  .driver-name {
+  .drivers__driver-name {
     margin: 5% 0;
     font-weight: 700;
     font-style: italic;
@@ -44,7 +44,7 @@
     color: $dark-grey;
   }
 
-  .description {
+  .drivers__description {
     display: flex;
     justify-content: space-between;
     font-size: 0.9em;
@@ -58,52 +58,52 @@
   }
 }
 
-.driver-container, .driver-container-reverse {
+.drivers__driver-container, .drivers__driver-container_reverse {
   padding: $container-desktop;
   padding-top: $section-padding-top-desktop;
   display: none;
 
-  .line {
+  .drivers__line {
     width: 90%;
     margin-bottom: 2%;
     height: 0;
     border-bottom: 2px solid $middle-grey;
   }
 
-  .driver-profile {
+  .drivers__driver-profile {
     display: flex;
     justify-content: space-between;
 
-    .driver-photo {
+    .drivers__driver-photo {
       width: 40%;
       margin-right: 10%;
     }
 
-    .driver-info {
+    .drivers__driver-info {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       flex-grow: 1;
 
-      .title {
+      .drivers__title {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         margin-right: 20%;
         line-height: 200%;
 
-        .driver-position {
+        .drivers__driver-position {
           font-size: 1em;
           letter-spacing: 0.01em;
         }
 
-        .driver-name {
+        .drivers__driver-name {
           font-size: 1.7em;
           font-style: italic;
         }
       }
 
-      .description {
+      .drivers__description {
         display: flex;
         justify-content: space-between;
         font-size: 0.9em;
@@ -119,35 +119,35 @@
   }
 }
 
-.driver-container-reverse {
+.drivers__driver-container_reverse {
 
-  .line {
+  .drivers__drivers__line {
     width: 90%;
     margin-left: 10%;
   }
-  .driver-profile {
+  .drivers__driver-profile {
     display: flex;
     justify-content: space-between;
     flex-direction: row-reverse;
 
-    .driver-photo {
+    .drivers__driver-photo {
       margin-left: 10%;
       margin-right: 0;
     }
 
-    .driver-info {
+    .drivers__driver-info {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       flex-grow: 1;
 
-      .title {
+      .drivers__title {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
       }
 
-      .description {
+      .drivers__description {
         display: flex;
         justify-content: space-between;
       }
@@ -156,13 +156,13 @@
 }
 
 @media screen and (min-width: $breakpoint-tablet) {
-  .driver-container-mobile {
+  .drivers__driver-container_mobile {
     display: none;
   }
-  .driver-container-reverse {
+  .drivers__driver-container_reverse {
     display: inline-block;
   }
-  .driver-container {
+  .drivers__driver-container {
     display: inline-block;
   }
 }
