fixes + refactor font-weight

--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -14,7 +14,7 @@ $middle-grey: #EBEBEB;
 $middle-grey-half-opacity: #EBEBEB77;
 
 $title-color: $pink;
-$title-font-weight: bold;
+$title-font-weight: 700;
 $title-font-style: italic;
 $title-font-size-mobile: 2.2em;
 $title-font-size-desktop: 2.4em;
