--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -36,7 +36,7 @@ section#about {
       letter-spacing: 0.01em;
       line-height: 133%;
       //font-style: italic;
-      font-weight: lighter !important;
+      font-weight: 400 !important;
     }
   }
 
