--- a/app/scss/_car.scss
+++ b/app/scss/_car.scss
@@ -36,7 +36,7 @@ section#car {
           * {
             margin: 0;
             line-height: 1.7em;
-            font-weight: bold;
+            font-weight: 600;
             font-size: .92em;
           }
         }
