--- a/app/scss/_drivers.scss
+++ b/app/scss/_drivers.scss
@@ -48,19 +48,19 @@
     display: flex;
     justify-content: space-between;
     font-size: 0.9em;
-    font-weight: normal;
+    font-weight: 400;
     letter-spacing: 0.01em;
     line-height: 167%;
 
     span {
-      font-weight: bold;
+      font-weight: 600;
     }
   }
 }
 
 .drivers__driver-container, .drivers__driver-container_reverse {
   padding: $container-desktop;
-  padding-top: $section-padding-top-desktop;
+  padding-top: 7%;
   display: none;
 
   .drivers__line {
@@ -108,11 +108,11 @@
         justify-content: space-between;
         font-size: 0.9em;
         letter-spacing: 0.01em;
-        font-weight: bold;
+        font-weight: 600;
         line-height: 150%;
 
         span {
-          font-weight: normal;
+          font-weight: 400;
         }
       }
     }
