--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -81,7 +81,7 @@ footer {
       border: none;
       background-color: $footer-button-color;
       padding: 2% 0;
-      font-weight: bold;
+      font-weight: 700;
       letter-spacing: 0.08em;
       text-transform: uppercase;
     }
