--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -36,7 +36,7 @@ header {
     height: $header-size;
     align-items: center;
 
-    padding: 0 30px;
+    padding: 0 5%;
 
     .header__left-container {
       display: flex;
@@ -139,6 +139,8 @@ header {
               color: $header-color;
               text-decoration: none;
               font-size: 1.2em;
+              letter-spacing: 0.01em;
+              line-height: 200%;
             }
           }
         }
@@ -154,10 +156,11 @@ header {
         text-transform: uppercase;
         letter-spacing: 0.08em;
         font-size: 0.9em;
+        font-weight: 700;
         line-height: 30px;
         border: 0;
         outline: none;
-        width: 100px;
+        width: 96px;
         height: 30px;
       }
     }
@@ -198,7 +201,9 @@ header:before {
             justify-content: space-around;
             margin-right: 50%;
             li {
-              margin-right: 40%;
+              margin-right: 65%;
+              font-size: 1em;
+              font-weight: 400;
             }
           }
         }
