--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -157,11 +157,10 @@ header {
         letter-spacing: 0.08em;
         font-size: 0.9em;
         font-weight: 700;
-        line-height: 30px;
+        line-height: 214%;
         border: 0;
         outline: none;
         width: 96px;
-        height: 30px;
       }
     }
   }
