fix mobile jumbotron width

--- a/app/scss/_jumbotron.scss
+++ b/app/scss/_jumbotron.scss
@@ -9,7 +9,7 @@ section#jumbotron {
     grid-row: 1;
     grid-column: 1;
     height: 50%;
-    min-width: 100%;
+    width: 100%;
     position: relative;
     top: 0;
     left: 0;
