--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -10,7 +10,7 @@ $dark-grey: #333333;
 $white: #F2F2F2;
 $pink: #F50A4D;
 $grey: #4F4F4F;
-$middle-grey: #EBEBEB;
+$middle-grey: #ebebeb;
 $middle-grey-half-opacity: #EBEBEB77;
 
 $title-color: $pink;
@@ -42,6 +42,8 @@ $footer-color: #E0E0E0;
 $footer-form-color: $white;
 $footer-form-border-color: $footer-button-color;
 
+// drivers
+$driver-line-color: #BDBDBD;
 
 // car
 $car-main-info-background: $middle-grey;
