--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -116,15 +116,16 @@ header {
         top: -100%;
         left: 0;
         width: 100%;
-        height: 30%;
+        height: 25%;
         background-color: $header-background-color;
         margin-top: $header-size;
         transition: all 0.3s ease 0s;
+        padding: 4% 0;
 
         .header__list {
           display: flex;
           flex-direction: column;
-          justify-content: space-around;
+          justify-content: space-evenly;
           z-index: 2;
           padding: 0;
           margin: 0;
@@ -138,7 +139,7 @@ header {
             .header__link {
               color: $header-color;
               text-decoration: none;
-              font-size: 1.2em;
+              font-size: 1.1em;
               letter-spacing: 0.01em;
               line-height: 200%;
             }
