--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -15,8 +15,9 @@ footer {
     letter-spacing: 0.01em;
 
     .footer__logo {
-      width: 40%;
+      width: 36%;
       max-width: 150px;
+      margin-top: 5%;
     }
 
     p {
@@ -93,23 +94,25 @@ footer {
     margin-top: $section-padding-top-desktop;
     flex-direction: row;
     justify-content: space-between;
-    padding: 5%;
+    padding: 4% 5%;
 
     .footer__about {
       flex-basis: 50%;
+
       .footer__logo {
-        width: 25%;
+        width: 30%;
+        margin-top: 0;
       }
 
       p {
         margin: 3% 0;
         font-size: .9em;
-        max-width: 75%;
+        max-width: 80%;
       }
     }
 
     .footer__navigation {
-      flex-basis: 25%;
+      flex-basis: 20%;
       .footer__menu {
         .footer__list {
           flex-direction: column;
@@ -122,7 +125,13 @@ footer {
     }
 
     .footer__form {
-      flex-basis: 25%;
+      flex-basis: 30%;
+
+      * {
+        font-weight: 400;
+        line-height: 214%;
+        margin: 1%;
+      }
     }
   }
 }
