--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -194,6 +194,7 @@ header:before {
         .header__menu {
           position: relative;
           margin: 0;
+          padding: 0;
           transition: 0s;
 
           .header__list {
